@@ -1,0 +1,1 @@
+{"player_index":1,"area_bounds":{"left_top":{"y":-333.5,"x":180.5},"right_bottom":{"y":-327.5,"x":186.5}},"surface_index":1,"resource_category":"basic-fluid","resource_entity_name":"crude-oil","toolbox":{"module_config":{},"extractor":{"entity_name":"pumpjack","output_offsets":{"2":{"x":2,"y":-1},"4":{"x":-1,"y":2},"6":{"x":-2,"y":1},"0":{"x":1,"y":-2}},"relative_bounds":{"left_top":{"x":-1,"y":-1},"right_bottom":{"x":1,"y":1}}},"connector":{"entity_name":"pipe","underground_entity_name":"pipe-to-ground","underground_distance_min":0,"underground_distance_max":9},"power_pole":{"entity_name":"substation","supply_range":8,"wire_range":18,"size":2}},"area":{"180.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"can-build","-330.5":"can-build","-329.5":"can-build","-328.5":"can-build","-327.5":"can-build"},"181.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"can-build","-330.5":"can-build","-329.5":"can-build","-328.5":"can-build","-327.5":"can-build"},"182.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"reserved-for-pump","-330.5":"reserved-for-pump","-329.5":"reserved-for-pump","-328.5":"can-build","-327.5":"can-build"},"183.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"reserved-for-pump","-330.5":"oil-well","-329.5":"reserved-for-pump","-328.5":"can-build","-327.5":"can-build"},"184.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"reserved-for-pump","-330.5":"reserved-for-pump","-329.5":"reserved-for-pump","-328.5":"can-build","-327.5":"can-build"},"185.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"can-build","-330.5":"can-build","-329.5":"can-build","-328.5":"can-build","-327.5":"can-build"},"186.5":{"-333.5":"can-build","-332.5":"can-build","-331.5":"can-build","-330.5":"can-build","-329.5":"can-build","-328.5":"can-build","-327.5":"can-build"}}}
