@@ -3,6 +3,7 @@ Version: 1.3.2
 Date: T.B.D.
   Fixes:
     - Fixed total game freeze, adding a limit to how far the search area for the next power-pole can grow. Raise error instead.
+    - Fixed being unable to place a 2x2 power-pole (substation) in a very small selection.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2023-03-05  
